--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,58 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.text-font, .py-2 {
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.bg-signup {
+  background-color: #000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.logo {
+  width: auto;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.bgImagesignup {
+  width: 100%;
 }
+
+.rounded-xl {
+  border-radius: 30px;
+}
+
+.bg-yellow{
+  background: #FBED9B;
+  opacity: 0.5;
+}
+
+.text-yellow{
+  color: #FBED9B;
+  font-size: 24px;
+}
+
+.bg-yellow:hover{
+  opacity: 1;
+  font-weight: 700;
+}
+
+.rounded{
+  border-radius: 6px;
+  margin-right: -10px;
+}
+
+.login-signup span:hover{
+  background-color: #fff;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+/* .margin-login{
+  margin-top: 100px !important;
+} */
