--- a/app/admin/admin.css
+++ b/app/admin/admin.css
@@ -19,6 +19,6 @@ letter-spacing: 0.384px;
 .admin-header{
     padding: 0 0 50px 0;
 }
-.footer{
+.footer, .header_part{
     display: none !important;
 }
