--- a/app/globals.css
+++ b/app/globals.css
@@ -131,7 +131,6 @@ p, span, a, li {
   width: 100% !important;
   height: auto !important;
   object-fit: contain;
-  margin-top: 40px;
 }
 
 .course-heroic-title {
@@ -145,7 +144,7 @@ p, span, a, li {
     -1px 1px 0 white,
     1px -1px 0 white,
     -1px -1px 0 white;
-  margin-top: 165px;
+  margin-top: 139px;
 }
 
 .stem-education-course {
@@ -174,7 +173,6 @@ p, span, a, li {
 
 .course-model-title {
   text-align: left;
-  padding: 0 20px;
   font-size: 14px;
   font-family: Poppins;
   color: black;
@@ -453,9 +451,15 @@ p, span, a, li {
 }
 .contact-heroic-image{
 	object-fit: contain;
-	margin-top: -12px;
 	width: 100% !important;
-	height: auto !important;
+	height: 321px !important;
+}
+
+.programs-heroic-image{
+	object-fit: contain;
+	width: 100% !important;
+	height: 321px !important;
+  margin-top: 59px;
 }
 
 .heroic-title {
@@ -741,6 +745,285 @@ p, span, a, li {
   width: 50%;
 }
 
+.padding-80{
+  padding: 0 80px;
+}
 
+.padding-40{
+  padding: 0 40px;
+}
+.course-details-title{
+  color: #1A202C;
+font-feature-settings: 'liga' off, 'clig' off;
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+  font-family: var(--font-orbitron);
+line-height: 28px;
+letter-spacing: 0.48px;
+margin-bottom: 5px;
+}
+.course-rating{
+  color: #101010;
+  font-family: var(--font-poppins);
+font-size: 14px;
+font-style: normal;
+font-weight: 600;
+line-height: 20px;
+}
+.objective-points{
+  color: #000;
+  font-family: var(--font-poppins);
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 130%; 
+}.objective-bullets{
+  margin-top: -2px;
+}
+.course-highlights-title{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-oxanium);
+  font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 150%; 
+}
+.highlights-points{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-poppins);
+font-size: 15px;
+font-style: normal;
+font-weight: 500;
+line-height: 130%; 
+}
+.course-include-title{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-poppins);
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%; 
+}
+.course-include-description{
+  color: var(--Black, #1A202C);
+text-align: right;
+  font-family: var(--font-poppins);
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%; 
+}
+.social-icons-course{
+border-radius: 12px;
+background: #F7F7F7;
+padding: 14px 12px;
+}
+.share-icon{
+  color: #0F0F0F;
+  font-family: var(--font-poppins);
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 160%; 
+}
+.social-icon-size{
+width: 15px;
+height: 15px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+aspect-ratio: 1/1;
+}
+.bootcamp-title{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-oxanium);
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 150%; 
+}
+.bootcamp-description{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-poppins);
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%; 
+}
+.bootcamp-drop-title{
+  color: #EF9E08;
+font-size: 18px;
+  font-family: var(--font-oxanium);
+font-style: normal;
+font-weight: 600;
+line-height: 150%; /* 27px */
+padding: 10px 17px 10px 28px !important;
+border-radius: 10px 10px 0px 0px !important;
+}
+.bootcamp-details-title{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-poppins);
+font-size: 14px;
+margin-bottom: 5px;
+font-style: normal;
+font-weight: 500;
+line-height: 100%; 
+}
+.bootcamp-details-description{
+  color: var(--Black, #1A202C);
+  font-family: var(--font-poppins);
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; 
+}
+.class-instructor-text{
+  color: var(--Black, #1A202C);
+font-feature-settings: 'liga' off, 'clig' off;
+  font-family: var(--font-orbitron);
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px;
+letter-spacing: 0.48px;
+}
+.class-instructor-gold{
+  color: #EFBC08;
+font-feature-settings: 'liga' off, 'clig' off;
+  font-family: var(--font-orbitron);
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px;
+letter-spacing: 0.48px;
+}
+.class-instructor-name{
+  color: var(--Black, #1A202C);
+font-family: Poppins;
+font-size: 17px;
+font-style: normal;
+font-weight: 600;
+line-height: 150%; /* 27px */
+}
+.class-instructor-designation {
+  font-family: var(--font-poppins);
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 150%;
+	font-style: italic;
+}
+.class-instructor-list {
+	color: var(--Black, #1a202c);
+  font-family: var(--font-poppins);
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 150%;
+	font-style: italic;
+}
+.course-hr-border{
+    border-top: 1px dashed #C5C5C5;
+    margin: 25px 10px 14px 0;
+}
+.feature-review-title{
+color: var(--Black, #1A202C);
+font-feature-settings: 'liga' off, 'clig' off;
+font-family: var(--font-orbitron);
+font-size: 23px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px;
+letter-spacing: 0.48px;
+}
+.feature-review-description{
+  color: var(--Black, #1A202C);
+text-align: center;
+ font-family: var(--font-poppins);
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+line-height: 163%; 
+}
+.feature-course-review{
+  border-top: 1px dashed #D18C30;
+  border-left: 1px dashed #D18C30;
+  border-right: 1px dashed #D18C30;
+  border-bottom: none;
+  border-top-left-radius: 22px;
+  border-top-right-radius: 22px;
+background: linear-gradient(180deg, rgba(255, 246, 204, 0.80) 0%, rgba(255, 209, 118, 0.00) 94.23%);
+box-shadow: 0 -6px 10px 0 rgba(0, 0, 0, 0.10);
+}
+.steps-robotics-points{
+     background-image: url('/steps.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: auto !important;
+  width: 100%;
 
-
+}
+.steps-robotics-others{
+     background-image: url('/others.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: auto !important;
+  width: 100%;
+}
+.diffrent-section{
+  background:linear-gradient(135deg, #f6f6f6, #f2f2f2); 
+   padding: 30px;
+  border-radius: 16px;
+padding: 35px 15px;
+  margin: 0 -6px 5px -6px;
+    clip-path: polygon(0 0, 46% 0, 100% 38%, 100% 100%, 0 100%, 0 0);
+}
+.feature-font{
+  color: var(--Black, #1A202C);
+font-size: 13px;
+font-style: normal;
+font-weight: 400;
+ font-family: var(--font-poppins);
+line-height: 150%; /* 21px */
+}
+.steps-robotics-points-titile{
+  color: var(--Black, #1A202C);
+font-feature-settings: 'liga' off, 'clig' off;
+font-family: var(--font-orbitron);
+font-size: 22px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 109.091% */
+letter-spacing: 0.44px;
+}
+.box-lesson{
+  border-radius: 50px;
+border: 1px solid #D3D3D3;
+background: #FFF;
+box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
+padding: 8px 15px;
+}
+.stem-brown{
+  color: #E76000;
+}
+.course-details-gold{
+  color: #EFBC08;
+font-feature-settings: 'liga' off, 'clig' off;
+font-family: var(--font-orbitron);
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px;
+letter-spacing: 0.48px;
+}
+.course-details-black{
+  color: var(--Black, #1A202C);
+font-feature-settings: 'liga' off, 'clig' off;
+font-family: var(--font-orbitron);
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 116.667% */
+letter-spacing: 0.48px;
+}
