--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,8 @@
   font-family: var(--font-orbitron);
 } */
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -1605,6 +1606,9 @@ li {
   font-weight: 400;
 }
 
+.we_offer img {
+  width: 1000px;
+}
 
 /*Container*/
 .container-custom {
@@ -1615,7 +1619,7 @@ li {
   padding-right: 1rem;
 }
 
-.container-spacing{
+.container-spacing {
   margin-top: 97px;
 }
 
@@ -1750,6 +1754,29 @@ li {
     margin: -280px 0 0 0 !important;
   }
 }
+
+
+@media (max-width: 1319px) {
+  .robot_center_image img {
+    width: 400px;
+    height: 400px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .robot_center_image img {
+    width: 380px;
+    margin-left: 30px;
+  }
+}
+
+/* @media (max-width: 1023px) {
+  .info_cards{
+    width: 100px !important;
+  }
+} */
+
 
 
 
@@ -2039,6 +2066,109 @@ li {
       margin-top: 150px;
     }
   }
+
+
+  /**Home page - Explore Learnign with STEPS Robotics**/
+
+
+  @media (max-width: 768px) {
+    .exploring_card {
+      min-height: 600px;
+    }
+
+    .responisve_explore {
+      bottom: 10px !important;
+      top: auto !important;
+    }
+  }
+
+
+
+
+
+
+  @media (max-width: 1319px) {
+    .responisve_explore {
+      margin-top: 260px;
+    }
+
+    .steps_list_items li {
+      font-size: 13px;
+    }
+  }
+
+  @media (max-width: 1242px) {
+    .responisve_explore {
+      margin-top: 250px;
+    }
+  }
+
+  @media (max-width: 1139px) {
+    .course_heading_des h1 {
+      margin-top: 20px;
+      font-size: 15px;
+    }
+
+    .course_heading_des p {
+      font-size: 10px !important;
+    }
+
+    .steps_list_items li {
+      font-size: 10px;
+    }
+  }
+
+  @media (max-width: 1023px) {
+    .course_heading_des h1 {
+      margin-bottom: 10px;
+      font-size: 20px;
+    }
+
+    .course_heading_des p {
+      margin-bottom: 20px;
+      font-size: 15px !important;
+    }
+
+    .steps_list_items li {
+      font-size: 14px;
+    }
+
+    .exploring_card {
+      margin-bottom: 60px !important;
+    }
+  }
+
+  /* @media (max-width: 1023px) {
+    .exploring_card{
+      margin-bottom: 60px !important;
+    }
+  } */
+
+  @media (max-width: 767px) {
+    .responisve_explore {
+      margin-top: 500px;
+    }
+  }
+
+  @media (max-width: 719px) {
+    .responisve_explore {
+      padding-top: 12px;
+
+    }
+  }
+
+  @media (max-width: 511px) {
+    .responisve_explore p {
+      font-size: 12px;
+    }
+  }
+
+  @media (max-width: 501px) {
+    .responisve_explore {
+      margin-top: 530px;
+    }
+  }
+
 
 
 
