--- a/app/globals.css
+++ b/app/globals.css
@@ -813,13 +813,124 @@ li {
   /* change this to control thickness */
 }
 
-.banner-text h1,
-.banner-text h2 {
-  margin-top: -20px;
+.banner-text h1 {
+  margin-top: -100px;
   font-family: var(--font-orbitron);
   font-weight: bold;
   font-size: 64px;
 }
+
+.banner-text h2 {
+  margin-top: -10px;
+  font-family: var(--font-orbitron);
+  font-weight: bold;
+  font-size: 64px;
+}
+
+@media (max-width: 500px) {
+  .banner-text h1 {
+    margin-top: 100px;
+    font-size: 20px;
+  }
+  .banner_RTL_image {
+    width: 100px;
+    height: 1500px;
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 1130px) {
+  .banner-text h1{
+    margin-top: -2px;
+    font-size: 35px !important;
+  }
+  .banner-text h2{
+    font-size:35px !important;
+  }
+  .banner-text p {
+    font-size: 12px;
+  }
+  .banner_RTL_image{
+    /* margin-top: 30px; */
+    width: 1500px;
+  }
+  .banner_h{
+    height: 495px;
+  }
+  .home_banner_button{
+    margin-top: -20px;
+    width: 170px;
+    height: 50px
+  }
+  .home_banner_button span{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 959px) {
+  .banner-text h1, .banner-text h2{
+    font-size: 25px !important;
+  }
+  .banner-text p{
+    margin-top: -10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .banner_h{
+    height: 695px;
+  }
+  .banner-text{
+    text-align: center;
+  }
+  .home_banner_button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+  }
+  .banner-text h1, .banner-text h2{
+    font-size: 40px !important;
+  }
+  .banner-text p {
+    font-size: 18px;
+  }
+  
+  /* .info_card {
+    bottom: -100px !important; 
+    margin-top: 40px;
+  } */
+}
+
+@media (max-width: 500px) {
+  .banner-text{
+    margin-top: 20px;
+  }
+  .kids_build{
+    margin-top: 90px;
+  }
+}
+
+@media (max-width: 962px) {
+  .info_card{
+    bottom: -80px !important; 
+    margin-top: 40px;
+  }
+}
+
+
+/**Navbar*/
+@media (max-width: 959px) {
+  .navbar a{
+    font-size: 12px !important;
+    margin: 12px !important;
+  }
+}
+
+
+
+
+
 
 .text-font-orbitron-explore,
 .font-orbitron {
@@ -1573,7 +1684,7 @@ li {
 }
 
 
-.home_banner_button {
+.home_banner_button, .explore_button {
   color: #fff;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   font-family: Poppins;
@@ -1610,6 +1721,78 @@ li {
   width: 1000px;
 }
 
+
+@media (max-width: 1319px) {
+  .section_1 {
+    width: 450px !important;
+    height: 700px !important;
+  }
+
+  .section_2 {
+    margin-left: -10px !important;
+    width: 220px !important;
+    height: auto !important;
+  }
+
+  .section_4 {
+    margin-left: -10px !important;
+  }
+
+  .section_5 {
+    margin-left: -10px !important;
+  }
+
+  .section_5 img {
+    width: auto !important;
+  }
+
+}
+
+@media (max-width: 1279px) {
+  .section_2 {
+    padding: 0 13px;
+  }
+
+  .section_4 {
+    padding: 0 13px !important;
+  }
+
+  .section_5 {
+    padding: 0 13px !important;
+  }
+}
+
+@media (max-width: 1209px) {
+  .section_2 {
+    padding: 0 20px;
+  }
+
+  .section_5 {
+    padding: 0 20px !important;
+  }
+}
+
+/* @media (max-width: 1023px) {
+  .study_gallery_desktop .section_1 img{
+    width: 600% !important;
+    
+  }
+} */
+
+@media (max-width: 1139px) {
+  .section_1 {
+    width: 100px !important;
+    margin: 20px;
+  }
+}
+
+
+
+
+
+
+
+
 /*Container*/
 .container-custom {
   width: 100%;
@@ -1620,7 +1803,7 @@ li {
 }
 
 .container-spacing {
-  margin-top: 97px;
+  margin-top: 102px;
 }
 
 
@@ -1714,6 +1897,18 @@ li {
   }
 }
 
+@media (max-width: 767px) {
+  .footer_talk_image {
+    margin-left: 250px;
+  }
+}
+
+@media (max-width: 719px) {
+  .footer_talk_image {
+    margin-left: 200px;
+  }
+}
+
 @media (min-width: 1320px) {
   .container-custom {
     max-width: 1320px;
@@ -1777,7 +1972,67 @@ li {
   }
 } */
 
+@media (max-width: 767px) {
+  .testimonial{
+    margin-top: 10px !important;
+  }
+  .pin_right{
+    left: 180;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 180;
+    margin-top: 20px;
+  }
+}
 
+@media (max-width: 720px) {
+  .pin_right{
+    left: 140;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 140;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 640px) {
+.pin_right{
+    left: 100;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 100;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 562px) {
+  .pin_right{
+    left: 80;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 80;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 514px) {
+  .pin_right{
+    left: 60;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 60;
+    margin-top: 20px;
+  }
+}
+
+.footer {
+  overflow: visible !important;
+}
 
 
 
