--- a/app/globals.css
+++ b/app/globals.css
@@ -657,6 +657,12 @@ line-height: 150%; /* 21px */
   height: 283px !important;
 }
 
+.programs-about-image {
+  object-fit: contain;
+  width: 100% !important;
+  height: 256px !important;
+}
+
 .contact-heroic-image {
   object-fit: contain;
   margin-top: -32px;
@@ -1039,14 +1045,25 @@ line-height: 140%; /* 44.8px */
   margin-top: -100px;
   font-family: var(--font-orbitron);
   font-weight: bold;
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .banner-text h2 {
   margin-top: -10px;
   font-family: var(--font-orbitron);
   font-weight: bold;
-  font-size: 64px;
+  font-size: 44px;
+}
+
+.banner-text p {
+  font-size: 16px !important;
+  font-weight: 400;
+}
+
+.banner_RTL_image{
+  margin-left: 20px !important;
+  width: 100% !important;
+  height: 500px;
 }
 
 @media (max-width: 500px) {
@@ -1145,7 +1162,7 @@ line-height: 140%; /* 44.8px */
 @media (max-width: 959px) {
   .navbar a{
     font-size: 12px !important;
-    margin: 12px !important;
+    margin: 1px !important;
   }
 }
 
@@ -1854,6 +1871,13 @@ background: linear-gradient(180deg, rgba(253, 182, 24, 0.43) 0%, rgba(255, 255, 
 }
 
 
+.testmonial_text p{
+  font-weight: 200 !important;
+  font-style: italic;
+}
+
+
+
 /**About Image */
 .about_section {
   flex-shrink: 0;
@@ -2328,6 +2352,17 @@ li {
   }
 }
 
+@media (max-width: 430px) {
+  .pin_right{
+    left: 30 !important;
+    margin-top: 350px;
+  }
+  .pin_left{
+    right: 30 !important;
+    margin-top: 20px;
+  }
+}
+
 .footer {
   overflow: visible !important;
 }
@@ -2404,6 +2439,10 @@ li {
 
 .we_offer img {
   width: 1000px;
+}
+
+.steps_list_items li, .steps_list_desc {
+  font-weight: 200;
 }
 
 
@@ -2731,180 +2770,114 @@ li {
 
 
 @layer utilities {
-  @media (max-width: 1221px) {
-    .why_choose_sex_2_tale {
-      width: 130px;
-      height: 100px;
-      margin-left: 27px;
-    }
+
+@media (max-width: 1139px) {
+  .why_choose_image_2{
+    right: -60px;
   }
-
-  @media (max-width: 1023px) {
-    .why_choose_image_1 {
-      left: -200px;
-    }
-
-    .why_choose_image_2 {
-      left: 130px;
-    }
+  .why_choose_sex_2_tale{
+    width: 100px;
+    height: 100px;
+    left: -175;
   }
+}
 
-  @media(max-width: 1267px) {
-    .why_choose_image_1 {
-      left: 40px;
-      bottom: 10px;
-    }
-
-    .why_choose_image_2 {
-      left: 45px;
-    }
+@media (max-width: 1023px) {
+  .why_choose_image_1{
+    left: -120;
   }
-
-  @media(max-width: 1183px) {
-    .why_choose_image_2 {
-      left: 85px;
-    }
+  .why_choose_image_2{
+    right: -170;
+    margin-top: 5px;
   }
+  
+}
 
-  @media(max-width: 1081px) {
-    .why_choose_image_1 {
-      left: -10px;
-      bottom: 10px;
-    }
+@media (max-width: 767px) {
+  .why_choose_image_1{
+    left: 100;
   }
-
-  @media(max-width: 1023px) {
-    .why_choose_image_1 {
-      left: -200px;
-      bottom: 10px;
-    }
-
-    .why_choose_image_2 {
-      left: 130px;
-    }
-
+  .why_choose_tale_1_1{
+    margin-top: -31px;
   }
-
-  @media(max-width: 767px) {
-    .why_choose_image_1 {
-      left: 200px;
-    }
-
-    .why_choose_image_2 {
-      left: 5px;
-    }
-
+  .why_choose_tale_1_2{
+    margin-top: -25px;
   }
-
-  @media(max-width: 750px) {
-    .why_choose_image_1 {
-      left: 150px;
-    }
-
-    .why_choose_image_2 {
-      left: -35px;
-    }
+  .why_choose_image_2{
+    margin-top: 10px;
+    margin-right: 270px;
   }
+}
 
-  @media(max-width: 716px) {
-    .why_choose_image_1 {
-      left: 140px;
-    }
-
-    .why_choose_image_2 {
-      left: -5px;
-    }
+@media (max-width: 719px) {
+  .why_choose_image_1{
+    left: 20;
   }
-
-  @media(max-width: 672px) {
-    .why_choose_image_1 {
-      left: 120px;
-    }
-
-    .why_choose_image_2 {
-      left: 10px;
-    }
+  .why_choose_image_2{
+    right: -280 !important;
   }
+}
 
-  @media(max-width: 641px) {
-    .why_choose_image_1 {
-      left: 110px;
-    }
-
-    .why_choose_image_2 {
-      left: 25px;
-    }
+@media (max-width:639px) {
+  .why_choose_image_1{
+    left: 50;
   }
-
-  @media(max-width: 585px) {
-    .why_choose_image_1 {
-      left: 120px;
-    }
-
-    .why_choose_image_2 {
-      left: 15px;
-    }
-
-    .why_choose_sex_2_tale {
-      width: 100px;
-      height: 80px;
-      margin-left: 55px;
-    }
-
+  .why_choose_image_2{
+    right: -240;
   }
-
-  @media(max-width: 507px) {
-    .why_choose_image_1 {
-      left: 75px;
-    }
-
-    .why_choose_image_2 {
-      left: 35px;
-    }
-
-    .why_choose_sex_2_tale {
-      width: 100px;
-      height: 80px;
-      margin-left: 55px;
-    }
-
+  .why_choose_tale_1_1, .why_choose_tale_1_2{
+    margin-top: -60px;
   }
-
-  @media(max-width: 437px) {
-    .why_choose_image_1 {
-      left: 30px;
-    }
-
-    .why_choose_image_2 {
-      left: 55px;
-    }
-
-    .why_choose_sex_2_tale {
-      width: 100px;
-      height: 80px;
-      margin-left: 55px;
-    }
-
+  .why_choose_sex_2_tale, .why_choose_sex_2_tale_1{
+    margin-top: -10px;
   }
+}
 
-  @media(max-width: 625px) {
-    .why_choose_image_1 {
-      left: 90px;
-    }
-
-    .why_choose_image_2 {
-      left: -55px;
-    }
-
-    .why_choose_sex_2_tale {
-      width: 100px;
-      height: 80px;
-      margin-left: 55px;
-    }
+@media (max-width: 500px) {
+  .why_choose_image_1{
+    right: 20;
   }
+  .why_choose_image_2{
+    left: 210;
+    margin-right: 200;
+  }
+  .why_choose_sex_2_tale{
+    width: 80px;
+    height: 80px;
+    left: -155;
+  }
+}
 
+@media (max-width: 450px) {
+  .why_choose_image_1 img{
+    width: 180px;
+  }
+  .why_choose_sex_2_tale, .why_choose_sex_2_tale_1{
+    width: 60px;
+    height: 60px;
+  }
+  .why_choose_sex_2_tale{
+    left: -130;
+  }
+  .why_choose_sex_2_tale_1{
+    left: -70;
+  }
+  .why_choose_tale_1_1, .why_choose_tale_1_2{
+    width: 60px;
+    height: 60px;
+  }
+  .why_choose_tale_1_1{
+    left: 190;
+  }
+  .why_choose_tale_1_2{
+    left: 250;
+  }
+}
 
-
+/* body .why_choose_image_2 {
+    left: 210;
+    margin-right: 200;
+  } */
   @media (max-width: 1352px) {
     .about_robotics {
       right: 200px;
@@ -2995,11 +2968,15 @@ li {
 
 
 
-
+/* @media (max-width: 1241px) {
+  .responisve_explore {
+      margin-top: 200px;
+    }
+} */
 
   @media (max-width: 1319px) {
     .responisve_explore {
-      margin-top: 260px;
+      margin-top: 240px;
     }
 
     .steps_list_items li {
@@ -3009,11 +2986,30 @@ li {
 
   @media (max-width: 1242px) {
     .responisve_explore {
-      margin-top: 250px;
+      margin-top: 245px;
+    }
+  }
+
+  /* @media (max-width: 768px) {
+    .exploring_card{
+      max-height: 200px !important;
+    }
+  } */
+
+  @media (max-width: 505px) {
+    .explore_image_responsive img{
+      width: 30px !important;
+      height: 200px !important;
     }
   }
 
   @media (max-width: 1139px) {
+    .explore_image_responsive{
+      width: 200px;
+    }
+    .explore_image_responsive img{
+      width: 200px !important;
+    }
     .course_heading_des h1 {
       margin-top: 20px;
       font-size: 15px;
