--- a/app/globals.css
+++ b/app/globals.css
@@ -1482,7 +1482,7 @@ background: linear-gradient(180deg, rgba(255, 246, 204, 0.80) 0%, rgba(255, 209,
   background-repeat: no-repeat;
   background-size: contain;
   height: auto !important;
-  width: 342px;
+  width: 360px !important;
 
 }
 
@@ -1492,7 +1492,7 @@ background: linear-gradient(180deg, rgba(255, 246, 204, 0.80) 0%, rgba(255, 209,
   background-repeat: no-repeat;
   background-size: contain;
   height: auto !important;
-  width: 342px;
+  width: 360px !important;
 }
 
 .might-intrest {
@@ -1509,7 +1509,7 @@ background: linear-gradient(180deg, rgba(255, 246, 204, 0.80) 0%, rgba(255, 209,
   border-radius: 16px;
   border: 4px solid #f1f1f1 !important;
   padding: 28px 12px;
-  margin: 0 -6px 5px -6px;
+  margin: 0 !important;
   clip-path: polygon(0 0, 46% 0, 100% 38%, 100% 100%, 0 100%, 0 0);
 }
 .nep-learn-points{
@@ -1856,20 +1856,11 @@ background: linear-gradient(180deg, rgba(253, 182, 24, 0.43) 0%, rgba(255, 255, 
     margin-top: 0;
     padding-right: 30px;
     padding-left: 30px;
+    width: 421px !important;
   }
 
   .how-diffrent-others-description {
     width: 100%;
-  }
-
-  .steps-robotics-points {
-    padding-left: 34px;
-    padding-right: 30px;
-  }
-
-  .steps-robotics-others {
-    padding-left: 34px;
-      padding-right: 30px;
   }
 
   .might-intrest {
@@ -2148,13 +2139,6 @@ li {
 }
 
 
-
-
-
-
-
-
-/*Container*/
 .container-custom {
   width: 100%;
   margin-left: auto;
@@ -2167,6 +2151,19 @@ li {
   margin-top: 102px;
 }
 
+@media screen and (max-width: 524px) {
+     .steps-robotics-points {
+  padding-left: 32px;
+    padding-right: 30px;
+    width: 360px !important;
+  }
+
+  .steps-robotics-others {
+  padding-left: 32px;
+    padding-right: 30px;
+    width: 360px !important;
+  }
+}
 
 @media (min-width: 540px) {
   .container-custom {
@@ -2177,16 +2174,6 @@ li {
     margin-top: 0;
   }
 
-  .steps-robotics-points {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .steps-robotics-others {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
   .course-heroic {
     height: auto;
   }
@@ -2194,6 +2181,7 @@ li {
   .maps {
     margin: -40px 0 0 0;
   }
+  
 }
 
 @media (min-width: 720px) {
@@ -2218,20 +2206,6 @@ li {
   .mt-bootcamp {
     margin-top: -40px;
   }
-
-  .class-instructor-popup {
-    margin-top: 0;
-  }
-
-  .steps-robotics-points {
-    padding-left: 15px;
-    padding-right: 17px;
-  }
-
-  .steps-robotics-others {
-    padding-left: 15px;
-    padding-right: 17px;
-  }
 }
 
 @media (min-width: 1140px) {
@@ -2240,17 +2214,17 @@ li {
   }
 
   .how-diffrent-others {
-    margin-top: -80px;
+    margin-top: -21px;
   }
 
-  .steps-robotics-points {
-    padding-left: 36px;
-    padding-right: 39px;
+ .steps-robotics-points {
+    padding-left: 15px;
+    padding-right: 17px;
   }
 
   .steps-robotics-others {
-    padding-left: 36px;
-    padding-right: 39px;
+    padding-left: 15px;
+    padding-right: 17px;
   }
 
   .class-instructor-popup {
@@ -2276,18 +2250,14 @@ li {
   }
 
 
-  .mt-bootcamp {
-    margin-top: -107px;
-  }
-
-  .steps-robotics-points {
-    padding-left: 70px;
-    padding-right: 67px;
+   .steps-robotics-points {
+    padding-left: 36px;
+    padding-right: 39px;
   }
 
   .steps-robotics-others {
-    padding-left: 70px;
-    padding-right: 67px;
+    padding-left: 36px;
+    padding-right: 39px;
   }
 
   .steps-robotics-robot {
@@ -2295,7 +2265,7 @@ li {
   }
 
   .how-diffrent-others {
-    margin-top: -230px;
+    margin-top: -21px;
   }
 
   .choose-section {
@@ -2405,17 +2375,6 @@ li {
 .footer {
   overflow: visible !important;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 .steps_robotics_child_h3 {
   color: var(--Black, #1A202C);
@@ -2549,14 +2508,6 @@ li {
   }
 }
 
-
-
-
-
-
-
-
-/*Container*/
 .container-custom {
   width: 100%;
   margin-left: auto;
@@ -2579,14 +2530,8 @@ li {
     margin-top: 0;
   }
 
-  .steps-robotics-points {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .steps-robotics-others {
-    padding-left: 60px;
-    padding-right: 60px;
+  .feature-course-review{
+    margin-top: 0px !important;
   }
 
   .course-heroic {
@@ -2614,7 +2559,7 @@ li {
   }
 
   .how-diffrent-others {
-    margin-top: -120px;
+    margin-top: 5px !important;
   }
 
   .mt-bootcamp {
@@ -2622,17 +2567,7 @@ li {
   }
 
   .class-instructor-popup {
-    margin-top: 0;
-  }
-
-  .steps-robotics-points {
-    padding-left: 15px;
-    padding-right: 17px;
-  }
-
-  .steps-robotics-others {
-    padding-left: 15px;
-    padding-right: 17px;
+    margin-top: -160px !important;
   }
 }
 
@@ -2642,16 +2577,16 @@ li {
   }
 
   .how-diffrent-others {
-    margin-top: -80px;
+    margin-top: -25px;
   }
 
   .steps-robotics-points {
-    padding-left: 36px;
+    padding-left: 45px;
     padding-right: 39px;
   }
 
   .steps-robotics-others {
-    padding-left: 36px;
+    padding-left: 45px;
     padding-right: 39px;
   }
 
@@ -2677,11 +2612,6 @@ li {
     max-width: 1320px;
   }
 
-
-  .mt-bootcamp {
-    margin-top: -107px;
-  }
-
   .steps-robotics-points {
     padding-left: 70px;
     padding-right: 67px;
@@ -2697,7 +2627,7 @@ li {
   }
 
   .how-diffrent-others {
-    margin-top: -230px;
+    margin-top: -21px;
   }
 
   .choose-section {
@@ -2798,16 +2728,6 @@ li {
 }
 
 
-
-
-
-
-
-
-
-
-
-
 @layer utilities {
 
 @media (max-width: 1139px) {
@@ -2831,6 +2751,8 @@ li {
   }
   
 }
+
+
 
 @media (max-width: 767px) {
   .why_choose_image_1{
@@ -2995,9 +2917,6 @@ li {
   }
 
 
-  /**Home page - Explore Learnign with STEPS Robotics**/
-
-
   @media (max-width: 768px) {
     .exploring_card {
       min-height: 600px;
@@ -3017,6 +2936,7 @@ li {
 	top: 27px;
 	left: 40px !important;
 }
+
   }
 
 
@@ -3325,8 +3245,19 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
   padding-bottom: 65px;
 }
 .diffrent-section {
-	padding: 40px 11px !important;
+padding: 40px 11px !important;
 }
+   .steps-robotics-points {
+    padding-left: 37px;
+    padding-right: 36px;
+    width: 360px !important;
+  }
+
+  .steps-robotics-others {
+    padding-left: 37px;
+    padding-right: 36px;
+    width: 360px !important;
+  }
 }
 
 @media (min-width: 720px) {
@@ -3343,6 +3274,8 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
 
 }
 
+
+
 @media (min-width: 960px) {
   .container-custom {
     max-width: 960px;
@@ -3352,18 +3285,18 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
     margin-top: -40px;
   }
 
-  .class-instructor-popup {
-    margin-top: 0;
-  }
-
   .steps-robotics-points {
     padding-left: 15px;
+    padding-bottom: -3px;
     padding-right: 17px;
+    width: 100% !important;
   }
 
   .steps-robotics-others {
-    padding-left: 15px;
+   padding-left: 15px;
+    padding-bottom: -3px;
     padding-right: 17px;
+    width: 100% !important;
   }
 }
 
@@ -3383,7 +3316,7 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
   }
 
   .steps-robotics-others {
-    padding-left: 36px;
+    padding-left: 45px;
     padding-right: 39px;
   }
 .top-triangle {
@@ -3395,24 +3328,76 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
     margin-top: -180px;
   }
 }
+@media screen and (min-width: 980px) and (max-width: 1317px) {
+  .steps-robotics-points{
+        width: 100% !important;
+    height: 504px !important;
+  }
+  .steps-robotics-others{
+        width: 100% !important;
+    height: 504px !important;
+  }
+}
+
+@media screen and (min-width: 998px) and (max-width: 1140px) {
+    .steps-robotics-points{
+        width: 321px !important;
+    height: 504px !important;
+  }
+  .steps-robotics-others{
+        width: 321px !important;
+    height: 504px !important;
+  }
+}
+
+@media screen and (min-width: 954px) and (max-width: 978px) {
+     .steps-robotics-points{
+         width: 320px !important;
+    height: 506px !important;
+  }
+  .steps-robotics-others{
+        width: 320px !important;
+    height: 506px !important;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 954px) {
+     .steps-robotics-points{
+         width: 320px !important;
+    height: 506px !important;
+  }
+  .steps-robotics-others{
+        width: 320px !important;
+    height: 506px !important;
+  }
+}
+
+@media screen and (min-width: 1028px) and (max-width: 1320px) {
+   .feature-course-review{
+    margin-top: -160px !important;
+  }
+}
+
 
 @media (min-width: 1320px) {
   .container-custom {
     max-width: 1180px;
   }
 
-  .mt-bootcamp {
-    margin-top: 40px;
-  }
-
   .steps-robotics-points {
-    padding-left: 36px;
-    padding-right: 39px;
+    padding-left: 30px !important;
+    padding-top: 30px !important;
+    padding-right: 30px !important;
+    width: 360px !important;
+    height: 504px !important;
   }
 
   .steps-robotics-others {
-    padding-left: 36px;
-    padding-right: 39px;
+      padding-left: 30px !important;
+    padding-top: 30px !important;
+    padding-right: 30px !important;
+     width: 360px !important;
+    height: 504px !important;
   }
 
   .steps-robotics-robot {
@@ -3427,15 +3412,11 @@ filter: drop-shadow(0 5px 14px rgba(253, 182, 24, 0.18));
     height: 60vh !important;
   }
 
-  .mt-bootcamp {
-    margin-top: -110px;
-  }
-
   .maps {
     margin: -280px 0 0 0 !important;
   }
   .feature-course-review{
-    margin-top: -150px;
+    margin-top: -150px !important;
   }
 
 }
