--- a/app/globals.css
+++ b/app/globals.css
@@ -3614,7 +3614,7 @@ li {
   }
 
   .feature-course-review {
-    margin-top: -150px;
+    margin-top: -150px !important;
   }
 
 }
@@ -3745,6 +3745,44 @@ li {
   .study_process_youtube{
     display: none;
   }
+}
+@media (min-width: 768px) and (max-width: 959px) {
+  .diffrent-section{
+	margin-top: 78px !important;
+	padding-top: 10px !important;
+	padding-bottom: 15px !important;
+	margin-left: 10px !important;
+	margin-right: 10px !important;
+}
+.steps-robotics-points {
+  width: 100% !important;
+  height: 520px !important;
+  margin-top: -80px;
+}
+.steps-robotics-others {
+  width: 100% !important;
+  height: 503px !important;
+  margin-top: -80px;
+}
+.steps-robotics-points-titile {
+ font-size: 12px !important;
+ margin-bottom: 15px !important; 
+}
+.feature-font{
+  font-size: 8px;
+}
+.steps-robotics-robot{
+  top: 108px;
+  right: 37px;
+}
+}
+
+@media (min-width: 640px) and (max-width: 767px) {
+  .diffrent-section{
+	margin-left: 30px !important;
+  margin-right: 30px !important;
+}
+
 }
 
  
