--- a/app/globals.css
+++ b/app/globals.css
@@ -1598,6 +1598,12 @@ button {
   width: 100%;
 }
 
+@media (max-width: 500px) {
+  .about img{
+    margin-top: 24px;
+  }
+}
+
 
 
 .steps-robotics-points-titile {
